--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/styled-components": "5.1.25",
     "@typescript-eslint/eslint-plugin": "~5.24.0",
     "@typescript-eslint/parser": "~5.24.0",
+    "apollo-server": "^3.8.2",
     "babel-jest": "27.5.1",
     "babel-plugin-styled-components": "1.10.7",
     "cypress": "^9.1.0",
@@ -49,6 +50,7 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.30.0",
     "eslint-plugin-react-hooks": "4.5.0",
+    "graphql": "^16.5.0",
     "jest": "27.5.1",
     "nx": "14.2.4",
     "prettier": "^2.6.2",
