--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jest": "27.5.1",
     "nx": "14.2.4",
     "prettier": "^2.6.2",
+    "prisma": "^3.15.1",
     "react-test-renderer": "18.1.0",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
