--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@prisma/client": "^3.15.1",
     "core-js": "^3.6.5",
     "express": "4.17.2",
     "react": "18.1.0",
